# sericaOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  serica-os.json  serica_os.json
.cargo/: config
crate/riscv/src/: asm.rs
crate/riscv/src/register/: macros.rs  sstatus.rs
opensbi/: sifive.elf  virt.elf
src/: clock.rs  consts.rs  context.rs  interrupt.rs  io.rs  lib.rs  main.rs  sbi.rs
src/boot/: entry.asm  linker.ld
src/device/: uart.rs
src/memory/: mod.rs  paging.rs
src/memory/buddy_allocator/: mod.rs
src/memory/frame_allocator/: mod.rs
src/memory_set/: mod.rs
src/new_memory/: mod.rs
src/new_memory/buddy_allocator/: mod.rs
src/new_memory/frame_allocator/: mod.rs
src/new_memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/process/: mod.rs  processor.rs  structs.rs  switch.asm  thread_pool.rs
src/process/scheduler/: mod.rs  round_robin.rs
src/riscv/: addr.rs  instructions.rs  mod.rs  sbi.rs
src/riscv/register/: mod.rs  satp.rs  scause.rs  sscratch.rs  sstatus.rs  stvec.rs  time.rs  timeh.rs
src/trap/: trap.asm
usr/: Makefile
usr/rust/: Cargo.toml  serica_os.json
usr/rust/src/: io.rs  lang_item.rs  lib.rs  syscall.rs
usr/rust/src/linked_list_allocator/: hole.rs  mod.rs
