[package]
name = "serica_os"
version = "0.1.0"
authors = ["Serica <943914044@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
use_spin = []

[dependencies]
#riscv = {version="0.5.4", features=["inline-asm"]}
riscv = { path = "crate/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.1"
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bit_field = "0.9.0"
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.3"
slab_allocator = "0.3.5"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"